--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                             </div>
                         </div>
                         <div class="product-price">
-                            <span class="original-price">$149.99</span>
-                            <span class="current-price">$97.99</span>
+                            <span class="original-price">₹299</span>
+                            <span class="current-price">₹249</span>
                         </div>
                         <button class="buy-now" data-product="education">BUY NOW</button>
                     </div>
@@ -114,8 +114,8 @@
                             </div>
                         </div>
                         <div class="product-price">
-                            <span class="original-price">$129.99</span>
-                            <span class="current-price">$79.99</span>
+                            <span class="original-price">₹279</span>
+                            <span class="current-price">₹199</span>
                         </div>
                         <button class="buy-now" data-product="animals">BUY NOW</button>
                     </div>
