--- a/index.html
+++ b/index.html
@@ -114,10 +114,12 @@
                             </div>
                         </div>
                         <div class="product-price">
-                            <span class="original-price">₹ 279</span>
-                            <span class="current-price">₹ 199</span>
+                            <span class="original-price">₹ 149</span>
+                            <span class="current-price">₹ 49</span>
                         </div>
+                        <a href="https://imojo.in/aibundle" target="_blank">
                         <button class="buy-now" data-product="animals">BUY NOW</button>
+                            </a>
                     </div>
                 </div>
             </div>
