--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <span class="original-price">₹ 149</span>
                             <span class="current-price">₹ 49</span>
                         </div>
-                        <a href="https://imojo.in/aibundle" target="_blank">
+                        <a href="https://imojo.in/aibundle">
                         <button class="buy-now" data-product="animals">BUY NOW</button>
                             </a>
                     </div>
