--- a/index.html
+++ b/index.html
@@ -117,9 +117,13 @@
                             <span class="original-price">₹ 149</span>
                             <span class="current-price">₹ 49</span>
                         </div>
-                        <a href="https://imojo.in/aibundle">
-                        <button class="buy-now" data-product="animals">BUY NOW</button>
-                            </a>
+                       <button 
+    class="buy-now" 
+    data-product="animals" 
+    data-link="https://imojo.in/aibundle"
+>
+    BUY NOW
+</button>
                     </div>
                 </div>
             </div>
