--- a/index.html
+++ b/index.html
@@ -84,10 +84,16 @@
                             </div>
                         </div>
                         <div class="product-price">
-                            <span class="original-price">₹ 299</span>
-                            <span class="current-price">₹ 249</span>
+                            <span class="original-price">₹ 199</span>
+                            <span class="current-price">₹ 99</span>
                         </div>
-                        <button class="buy-now" data-product="education">BUY NOW</button>
+                       <button 
+    class="buy-now" 
+    data-product="education" 
+    data-link="https://imojo.in/6WTtQ"
+>
+    BUY NOW
+</button>
                     </div>
                 </div>
 
